2009-02-10  Matt Kraai  <kraai@ftfbs.org>

        Don't define meta_spew_event unless verbose mode is on.
	Closes #571126.

	* src/core/display.c:
	* src/core/window.c:

2009-02-10  Matt Kraai  <kraai@ftfbs.org>

	* README: switch is "--disable-verbose-mode", not "--disable-verbose".
          Closes #571210.

2009-02-10  Thomas Thurman  <tthurman@gnome.org>

        rm incorrect comment

	* src/include/util.h:

2009-02-10  Thomas Thurman  <tthurman@gnome.org>

        Further movement of code out of metacity-dialog into Zenity;
        this time it's the "kill or wait?" dialogue.  Much code saved.

	* src/core/delete.c:
	* src/core/keybindings.c:
	* src/core/main.c:
	* src/core/util.c:
	* src/core/window-private.h:
	* src/core/window.c:
	* src/include/util.h:

2009-02-07  Thomas Thurman  <tthurman@gnome.org>

        Windows demanding attention should never appear in the
        alt-tab list unless they're of a type which might have appeared
        there anyway.  This solves a problem under AWN where docks which were
        marked as demanding attention appeared in all alt-tab lists;
        they were irrelevant and it was impossible to remove them from the
        lists.

	* src/core/display.c:

2009-02-07  Thomas Thurman  <tthurman@gnome.org>

	* src/ui/theme.c: some commenting

2009-02-07  Matt Kraai  <kraai@ftfbs.org>

	* src/core/display.c: Only skip the first window in
        the alt-tab chain if it's actually the current window
        (urgent windows on other workspaces may precede it).
        Fixes #535887.

2009-02-05  Thomas Thurman  <tthurman@gnome.org>

        Lines where x1==x2 or y1==y2 may have the second element
        null.  Lines where both are null, and the width is zero,
        are points.  This speeds things up surprisingly much.

	* src/ui/theme-parser.c:
	* src/ui/theme.c:

2009-02-05  Thomas Thurman  <tthurman@gnome.org>

	* src/core/main.c: incredibly baroque system to make sure